Streamlined buy query
